// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds-hover() > should return correct css for opts: { borderRadius: '6px' } 1`] = `
"div {
  border-radius: 6px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1);
}
@media (hover: hover) {
  div:hover {
    background: hsla(236, 6.4%, 51%, 0.148);
  }
}"
`;

exports[`pds-hover() > should return correct css for opts: { borderRadius: 'medium' } 1`] = `
"div {
  border-radius: 6px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1);
}
@media (hover: hover) {
  div:hover {
    background: hsla(236, 6.4%, 51%, 0.148);
  }
}"
`;

exports[`pds-hover() > should return correct css for opts: { borderRadius: 'small' } 1`] = `
"div {
  border-radius: 4px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1);
}
@media (hover: hover) {
  div:hover {
    background: hsla(236, 6.4%, 51%, 0.148);
  }
}"
`;

exports[`pds-hover() > should return correct css for opts: {} 1`] = `
"div {
  border-radius: 4px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1);
}
@media (hover: hover) {
  div:hover {
    background: hsla(236, 6.4%, 51%, 0.148);
  }
}"
`;
